# shaderbox

./: Cargo.toml
shaders/: fragment.wgsl  vertex.wgsl
src/: light_manager_component.rs  main.rs
