[package]
name = "shaderbox"
version = "0.1.3"
edition = "2024"

[dependencies]
wgpu = "28.0.0"
v4 = { git = "https://github.com/GameHunter101/V4-Engine" }
tokio = "1.49.0"
image = "0.25.9"
nalgebra = "0.33.2"
bytemuck = "1.25.0"
algoe = { git = "https://github.com/GameHunter101/Algoe" }
winit = { version = "0.29.15" }
futures = "0.3.31"
